--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ django-crispy-forms==1.14.0
 django-environ==0.8.1
 django-heroku==0.3.1
 gunicorn==20.1.0
-psycopg2==2.9.3
+psycopg2>=2.8,<2.9
 pytz==2021.3
 sqlparse==0.4.2
 whitenoise==6.0.0
